--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "author": "Joseph Fieber",
   "description": "A plugin for tracking body measurements in Obsidian.",
-  "main": "src/main.ts",
+  "main": "main.js",
+  "stylesheets": ["styles.css"],
   "minAppVersion": "0.12.0",
   "apiVersion": "1.0.0",
   "permissions": [
