--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An Obsidian plugin to track body measurements.",
   "main": "dist/main.js",
   "scripts": {
-    "build": "node esbuild.config.mjs",
-    "dev": "node esbuild.config.mjs --watch"
+    "build": "node esbuild.config.mjs production",
+    "dev": "node esbuild.config.mjs --watch",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -15,6 +16,7 @@
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "esbuild": "^0.12.0",
+    "rimraf": "^5.0.10",
     "rollup": "^2.56.3",
     "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.8.1",
