added google fit, other stuff seems to work

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "id": "jots-body-tracker",
+  "id": "body-tracker",
   "name": "Body Tracker",
   "version": "1.0.0",
-  "author": "Joseph Fieber",
-  "description": "A plugin for tracking body measurements in Obsidian.",
+  "author": "Your Name",
+  "description": "Track body measurements with Google Fit integration",
   "main": "main.js",
   "stylesheets": [
     "styles.css"
   ],
-  "minAppVersion": "0.12.0",
+  "minAppVersion": "0.15.0",
   "apiVersion": "1.0.0",
   "permissions": [
     "read",
@@ -18,5 +18,24 @@
     "default": {
       "unit": "cm"
     }
-  }
+  },
+  "authorUrl": "https://your-website.com",
+  "isDesktopOnly": false,
+  "commands": [
+    {
+      "id": "connect-google-fit",
+      "name": "Connect Google Fit Account",
+      "icon": "link"
+    },
+    {
+      "id": "sync-google-fit",
+      "name": "Sync Google Fit Measurements",
+      "icon": "refresh-cw"
+    },
+    {
+      "id": "complete-google-fit-auth",
+      "name": "Complete Google Fit Authentication",
+      "icon": "check"
+    }
+  ]
 }
